K8s/auth/authelia/authelia-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      containers:
        - name: authelia
          image: authelia/authelia:latest
          ports:
            - containerPort: 9091
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          projected:
            sources:
              - configMap:
                  name: authelia-config
              - configMap:
                  name: authelia-users
