K8s/auth/authelia/authelia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: auth
spec:
  selector:
    app: authelia
#  ports:
#    - name: http
#      port: 80
#      targetPort: 9091
